# SoMSP

./: .gitignore  CMakeLists.txt  README.md  input.txt
src/: angle.f90  calculation_model.f90  constants.F90  directions.f90  factors.f90  geometry.f90  integrals.f90  logging.f90  matrix.f90  mode_functors.f90  regime.F90  scatterer.f90  scattering_calculation.f90  spheroidal_indicatrix.f90  spheroidal_initial.f90  spheroidal_scattering.f90  spheroidal_tmatrix.f90  tmatrix_conversion.f90  tmatrix_extraction.f90  utils.f90  wavelength_point.f90
src/contexts/: barber_context.f90  contexts.f90  far_context.f90  scattering_context.f90  spheroidal_context.f90
src/functions/: complex_oblate_swf.f90  complex_prolate_swf.f90  complex_prolate_swf.mod  legendre_functions.f90  param.f90  spheroidal.f90
